# Athanor

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: README.md
.github/workflows/: ci.yml
athanor/v2_0/: README.md
athanor/v2_0/engine/: athanor_engine_v2_0.py
configs/: README.md  ablation_thresholds.yaml  base.yaml  mnist_evolution.yaml  toy_experiment.yaml
data/: README.md
data/archives/: README.md
docs/: README.md
docs/source/: README.md  architecture.md  athanor-latex-paper.tex  codex_777_triadic_boundary_excess_v1_0.tex  codex_777_triadic_boundary_excess_v2_0.tex  conf.py  h20_omega_basin_noise_immunity_v1_5.tex  h44_boundary_algebra_layer_v1_0.tex  h7_coherence_geometry_law_v2_1.tex  index.rst
examples/: minimal_toy_loop.py  neuroevolution_mnist.py  symbolic_regression.py
scripts/: README.md  analyze_archive.py  export_results.py  root_reflection.py  run_evolution.py  visualize_drift.py
src/: README.md
src/athanor/: README.md  __init__.py  __main__.py
src/athanor/adapters/: README.md  __init__.py  base.py  local.py
src/athanor/agents/: AGENTS.md  README.md  __init__.py  archivist_agent.py  base.py  proposer_agent.py  selector_agent.py  telemetry_agent.py  verifier_agent.py
src/athanor/backends/: README.md  __init__.py  jax_backend.py  symbolic_backend.py  torch_backend.py
tests/: README.md
tests/integration/: README.md  test_cli_toy.py  test_full_loop.py
tests/unit/: README.md  test_archive.py  test_coherence.py  test_proposer_adapter.py  test_registry.py  test_verifier.py
(+22 files in other folders)
